# my-docs

./: .gitignore  Makefile  README.md  context7.json  package.json  pyproject.toml  tailwind.config.js  test-data.json
docs/: REACT_SETUP.md  mermaid-examples.md  test-data.yml
docs/diagrams/: c4-context.mmd  class.mmd  er-diagram.mmd  flowchart.mmd  gantt.mmd  gitgraph.mmd  journey.mmd  pie.mmd  sequence.mmd  state.mmd
docs/review/: markdown-styling-review.md  python-server-cleanup.md  react-architecture-refactoring.md  react-integration-review.md  refactoring-complete.md  visibility-detection-for-header-tracking.md
frontend/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Admin.tsx  FileTree.tsx  FileViewer.tsx  FileViewerHeader.tsx  Layout.tsx  StructureTree.tsx
frontend/src/components/FileTree/: FileTree.tsx  FileTreeItem.tsx
frontend/src/components/admin/: AdminHeader.tsx  AdminSidebar.tsx  ProjectCard.tsx  ProjectForm.tsx
frontend/src/hooks/: useFileContent.ts  useFileSystemEvents.ts  useFileTree.ts  useProjects.ts  useScrollPosition.ts
frontend/src/services/: api.ts  eventService.ts  fileService.ts  projectService.ts
frontend/src/store/: useAppStore.ts  useFileTreeStore.ts  useProjectStore.ts  useStore.ts
frontend/src/types/: index.ts
src/fileviewer/: __init__.py  file_parser.py  project.py  server.py  watcher.py
src/fileviewer/static/: admin.js  app.js  app_old.js  input.css
src/fileviewer/templates/: admin.html  index.html
(+10 files in other folders)
