[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fileviewer"
version = "0.1.0"
description = "A web-based file viewer for markdown, JSON, and YAML files"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = [
    "flask>=3.0.0",
    "watchdog>=3.0.0",
    "pyyaml>=6.0",
    "markdown>=3.5",
    "flask-cors>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.scripts]
fileviewer = "fileviewer.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']
